--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -158,8 +158,8 @@ header {
             box-sizing: border-box;
             width: 100%;
             height: 100%;
-            border: 2px solid theme.$transparent-primary;
-            background-color: theme.$transparent-primary;
+            border: 2px solid theme.$shadow-primary;
+            background-color: theme.$shadow-primary;
             padding: 
                 utility.px-to-rem(5px)
                 2rem
@@ -225,7 +225,7 @@ header {
     // - content is now fixed width (handled above by theme.content-width-by-breakpoint)
     // - phone icon is removed
     // - the search bar moves up to same line as logo and changes appearance
-    @include utility.above-breakpoint("small") {
+    @include theme.above-breakpoint("small") {
 
         // phone doesn't appear at all
         a.phone {
@@ -323,7 +323,7 @@ header {
     // - search text input hidden, leaving only search button (clicking button should show text input, but that needs JS)
     // - support button appears
     // - contact button appears
-    @include utility.above-breakpoint("medium") {
+    @include theme.above-breakpoint("medium") {
         .content {
             // grid layout changes, adding more columns
             @include utility.grid-columns (
@@ -425,7 +425,7 @@ header {
     // at final breakpoint:
     // - content fixed width increases
     // - search text input appears again
-    @include utility.above-breakpoint("large") {
+    @include theme.above-breakpoint("large") {
         .content {
             // grid layout changes, adding more columns
             @include utility.grid-columns(
