--- a/scss/utility/_horizontal-shadow-after.scss
+++ b/scss/utility/_horizontal-shadow-after.scss
@@ -9,7 +9,7 @@
     &::after {
         content: "";
         background-image: linear-gradient(to bottom,                
-            theme.$transparent-primary,
+            theme.$shadow-primary,
             transparent
         );
 
@@ -31,7 +31,7 @@
     &::after {
         content: "";
         background-image: linear-gradient(to bottom,                
-            theme.$transparent-primary,
+            theme.$shadow-primary,
             transparent
         );
 
