--- a/scss/layout/_services.scss
+++ b/scss/layout/_services.scss
@@ -19,27 +19,27 @@ $icon-background-size: utility.px-to-rem(60px);
         display: flex;
         flex-direction: column;
 
-        padding: 1.5em;
+        padding: utility.px-to-rem(30px);
         margin-top: 0;
-        margin-bottom: 2rem;
+        margin-bottom: utility.px-to-rem(11px);
         
         background-color: theme.$primary-contrast;
         
-
         text-decoration: none;
         color: theme.$primary;
         text-align: center;
-
     }
 
     h2 {
         font-size: theme.$services-heading-size;
         font-weight: 400;
+        margin: 0 0 utility.px-to-rem(11px);
     }
 
     p {
         font-size: theme.$services-para-size;
         line-height: 1.375rem;
+        margin: 0 0 utility.px-to-rem(12px);
     }
 
     .call-to-action {
@@ -61,6 +61,7 @@ $icon-background-size: utility.px-to-rem(60px);
     // generate a small horizontal line after the h2 element
     h2::after {
         @include utility.short-horizontal-line;
+        margin-top: utility.px-to-rem(14px);
     }
 
     // set button's colour based on the class of the service card it's within
@@ -88,7 +89,7 @@ $icon-background-size: utility.px-to-rem(60px);
             width: $icon-background-size;
             height: $icon-background-size;
 
-            margin: 0 auto 1.3rem;
+            margin: 0 auto utility.px-to-rem(17px);
         }
     }
 
@@ -125,12 +126,12 @@ $icon-background-size: utility.px-to-rem(60px);
     // however spacing between elements is important to this layout, and spacing
     // between grid tracks is not well supported in IE11.
 
-    // at small breakpoint, first 3 cards remain filling page, but others fit 2 to a row
     @include theme.above-breakpoint("small") {
         @include utility.margin-x-center;
         padding-left: 0;
         padding-right: 0;
-
+        
+        // at small breakpoint, first 3 cards remain filling page, but others fit 2 to a row
         .other-services {
             @include utility.wrapped-flex;
 
@@ -139,14 +140,14 @@ $icon-background-size: utility.px-to-rem(60px);
 
             > * {
                 margin: 1rem;
-                flex-basis: 18rem;
+                flex-basis: 15rem;
                 flex-grow: 1;
             }
         }
     }
 
-    // at medium breakpoint the first cards now also fit multiple in a row
     @include theme.above-breakpoint("medium") {
+        // at medium breakpoint the first cards now also fit multiple in a row
         .top-services {
             @include utility.wrapped-flex;
 
@@ -159,13 +160,18 @@ $icon-background-size: utility.px-to-rem(60px);
                 flex-grow: 1;
             }
         }
+
+        // other cards should fit 2 on a row
+        .other-services > * {
+            flex-basis: 15rem;
+        }
     }
 
     @include theme.above-breakpoint("large") {
         // other-services should form row of 4 at this breakpoint,
         // so reduce their flex-basis to allow them to fit.
         .other-services > * {
-            flex-basis: 13rem;
+            flex-basis: 12rem;
         }
     }
 }
